[package]
name = "bmp-monochrome"
version = "0.4.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/RCasatta/bmp-monochrome"
repository = "https://github.com/RCasatta/bmp-monochrome"
documentation = "https://docs.rs/bmp-monochrome/"
description = "Encode and decode monochromatic bitmaps without additional dependencies, useful for QR codes."
keywords = ["bmp", "monochrome"]
readme = "README.md"

[dependencies]

[dev-dependencies]
rand = "0.7.3"