[package]
name = "bmp-monochrome"
version = "0.12.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/RCasatta/bmp-monochrome"
repository = "https://github.com/RCasatta/bmp-monochrome"
documentation = "https://docs.rs/bmp-monochrome/"
description = "Encode and decode monochromatic bitmaps without additional dependencies, useful for QR codes."
keywords = ["bmp", "monochrome"]
readme = "README.md"

[lib]
name = "bmp_monochrome"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
rand = "0.7.3"