[package]
name = "bmp-monochrome"
version = "0.17.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/RCasatta/bmp-monochrome"
repository = "https://github.com/RCasatta/bmp-monochrome"
documentation = "https://docs.rs/bmp-monochrome/"
description = "Encode and decode monochromatic bitmaps without additional dependencies, useful for QR codes."
keywords = ["bmp", "monochrome"]
readme = "README.md"

[lib]
name = "bmp_monochrome"
path = "src/lib.rs"

[dependencies]
arbitrary = { version = "0.4.7", default-features = false, optional = true, features = ["derive"] }
image = { version = "0.23.10", default-features = false, optional = true, features = ["bmp"] }

[dev-dependencies]
rand = "0.7.3"
base64 = "0.13.0"

[features]
fuzz = ["arbitrary", "image"]